--- a/app/views/finance/liability.html.erb
+++ b/app/views/finance/liability.html.erb
@@ -39,7 +39,7 @@
   </div>
 
   <div class="link-box">
-    <div class="link-heading"><%= link_to "View", :action => "view_liability" %> </div>
+    <div class="link-heading"><%= link_to "#{t('view')}", :action => "view_liability" %> </div>
     <div class="link-descr"><%= t('liability_view') %></div>
   </div>
 
