--- a/app/views/finance/liability_pdf.erb
+++ b/app/views/finance/liability_pdf.erb
@@ -22,7 +22,7 @@
 <div id="page-yield">
 
   <div class="hor_line"></div>
-  <h2>Liabilities Report</h2>
+  <h2><%= t('liabilities_report') %></h2>
   <div class="hor_line"></div>
 
 
@@ -31,7 +31,7 @@
     <% total_amount = 0 %>
     <div id="pdf-info">
       <table id="pdf-table" width="100%" cellspacing="0">
-        <tr class="table-header"><td class="col-pdf">Sl no.</td><td class="col-pdf"> Asset </td><td class="col-pdf"> Created At </td><td class="col-pdf"> Total Amount </td></tr>
+        <tr class="table-header"><td class="col-pdf"><%= t('sl_no') %></td><td class="col-pdf"><%= t('asset') %></td><td class="col-pdf"><%= t('created_at') %></td><td class="col-pdf"><%= t('total_amount') %></td></tr>
         <% i = 0  %>
         <% c= 'even' %>
         <% @liabilities.each do |l| %>
