--- a/app/views/finance/view_asset.html.erb
+++ b/app/views/finance/view_asset.html.erb
@@ -27,7 +27,7 @@
 </div>
 <div id="inner-tab-menu">
   <ul>
-      <li><%= link_to 'PDF Report',{:controller => 'finance', :action => 'asset_pdf'}, :target=>'_blank' %></li>
+      <li><%= link_to "#{t('pdf_report')}",{:controller => 'finance', :action => 'asset_pdf'}, :target=>'_blank' %></li>
   </ul>
 </div>
 <div id="page-yield">
