--- a/app/views/finance/_fee_collection_edit.html.erb
+++ b/app/views/finance/_fee_collection_edit.html.erb
@@ -34,15 +34,15 @@
   </div>
   <div class="label-field-pair">
     <label for="reason">  <%= t('start_date') %></label>
-    <div class="text-input-bg"><%= calendar_date_select_tag 'fee_collection[start_date]',  @finance_fee_collection.start_date %></div>
+    <div class="text-input-bg"><%= calendar_date_select_tag 'fee_collection[start_date]',  I18n.l(@finance_fee_collection.start_date,:format=>:normal) %></div>
   </div>
   <div class="label-field-pair">
     <label for="reason">  <%= t('end_date') %></label>
-    <div class="text-input-bg"><%= calendar_date_select_tag 'fee_collection[end_date]',@finance_fee_collection.end_date %></div>
+    <div class="text-input-bg"><%= calendar_date_select_tag 'fee_collection[end_date]',I18n.l(@finance_fee_collection.end_date,:format=>:normal) %></div>
   </div>
   <div class="label-field-pair">
     <label for="reason">  <%= t('due_date') %></label>
-    <div class="text-input-bg"><%= calendar_date_select_tag 'fee_collection[due_date]', @finance_fee_collection.due_date%></div>
+    <div class="text-input-bg"><%= calendar_date_select_tag 'fee_collection[due_date]', I18n.l(@finance_fee_collection.due_date,:format=>:normal)%></div>
   </div>
 
   <div class="extender"></div>
