--- a/app/views/finance/_fees_particulars_list.html.erb
+++ b/app/views/finance/_fees_particulars_list.html.erb
@@ -57,5 +57,5 @@
     <% end %>
   </table>
 <% else %>
-  <%= t('no_particulars') %>
+<p class="flash-msg"><%= t('no_particulars') %></p>
 <% end %>
