--- a/app/views/finance/expense_list_update.erb
+++ b/app/views/finance/expense_list_update.erb
@@ -55,7 +55,7 @@
     </table>
   <% else %>
     <br />
-    <%= t('no_transaction_for_the_given_period') %>
+    <p class="flash-msg"><%= t('no_transaction_for_the_given_period') %></p>
   <% end %>
 
 </div>
