--- a/app/views/student/advanced_search_pdf.html.erb
+++ b/app/views/student/advanced_search_pdf.html.erb
@@ -21,7 +21,7 @@
 
 <div id="page-yield">
   <div class="hor_line"></div>
-  <h2><%= t('student_text') %>-<%= t('advanced_search') %></h2>
+  <h2><%= t('student_text') %>-<%= t('advanced_search_text') %></h2>
   <div class="hor_line"></div>
 
   <div class="extender"> </div>
