--- a/app/views/employee/create_monthly_payslip.erb
+++ b/app/views/employee/create_monthly_payslip.erb
@@ -18,49 +18,59 @@
 #under the License. -%>
 
 
- <div id="content-header">
-    <img src="/images/HR/show_hr.png" alt="" />
+<div id="content-header">
+  <img src="/images/HR/show_hr.png" alt="" />
   <h1><%= t('monthly_payslip') %></h1>
   <h3><%= t('create') %></h3>
-    <div id="app-back-button">
-     <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
-    </div>
+  <div id="app-back-button">
+    <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
   </div>
+</div>
 
 
-    <div id="page-yield">
+<div id="page-yield">
+  <div id="employee_profile_heading">
+
+    <div id ="employee_main_info">
+      <h3> <%= @employee.full_name %>  </h3>
+      <h4><%= t('employee_id') %>: <%= @employee.employee_number %> </h4>
+    </div>
+
+    <div class="extender"></div>
+
+  </div>
 
   <% unless flash[:notice].nil? %>
     <p class="flash-msg"> <%= flash[:notice] %> </p>
   <% end %>
-<div id="form-content">
-  <% form_for :manage_payroll do |s| %>
+  <div id="form-content">
+    <% form_for :manage_payroll do |s| %>
 
     <div class="payslip-field-pair">
       <label for="salary_date"><%= t('salary_date') %></label>
       <div class="payslip-input-bg">
 <%= calendar_date_select_tag 'salary_date', I18n.l(Date.today,:format=>:normal),
             :year_range => 2.years.ago..0.years.from_now %></div>
-    </div>
+      </div>
 
-  <% @independent_categories.each do |c| %>
-      <%- val = EmployeeSalaryStructure.find_by_employee_id_and_payroll_category_id(@employee, c) -%>
-    <div class="payslip-field-pair">
-      <label for="payroll_category_name"><%= c.name %></label>
-      <div class="payslip-input-bg"><%= s.text_field :amount, :index => c.id, :value => (val.nil? ? 0 : val.amount),
-                                                      :onChange=> "#{remote_function(:url  => {:controller=>"payroll",:action => "update_dependent_fields"},
-                                                          :with => "'amount='+ value + '&cat_id=' + #{c.id}")}"%></div>
-    </div>
-    <% end %>
-  <% @dependent_categories.each do |c| %>
-      <%- val = EmployeeSalaryStructure.find_by_employee_id_and_payroll_category_id(@employee, c) -%>
-    <div class="payslip-field-pair">
-      <label for="payroll_category_name"><%= c.name %></label>
-      <div class="payslip-input-bg"><%= s.text_field :amount, :index => c.id, :value => (val.nil? ? 0 : val.amount),
-                                                      :onChange=> "#{remote_function(:url  => {:controller=>"payroll",:action => "update_dependent_fields"},
-                                                          :with => "'amount='+ value + '&cat_id=' + #{c.id}")}"%></div>
-    </div>
-    <% end %>
+      <% @independent_categories.each do |c| %>
+        <%- val = EmployeeSalaryStructure.find_by_employee_id_and_payroll_category_id(@employee, c) -%>
+        <div class="payslip-field-pair">
+          <label for="payroll_category_name"><%= c.name %></label>
+          <div class="payslip-input-bg"><%= s.text_field :amount, :index => c.id, :value => (val.nil? ? 0 : val.amount),
+              :onChange=> "#{remote_function(:url  => {:controller=>"payroll",:action => "update_dependent_fields"},
+            :with => "'amount='+ value + '&cat_id=' + #{c.id}")}"%></div>
+        </div>
+      <% end %>
+      <% @dependent_categories.each do |c| %>
+        <%- val = EmployeeSalaryStructure.find_by_employee_id_and_payroll_category_id(@employee, c) -%>
+        <div class="payslip-field-pair">
+          <label for="payroll_category_name"><%= c.name %></label>
+          <div class="payslip-input-bg"><%= s.text_field :amount, :index => c.id, :value => (val.nil? ? 0 : val.amount),
+              :onChange=> "#{remote_function(:url  => {:controller=>"payroll",:action => "update_dependent_fields"},
+            :with => "'amount='+ value + '&cat_id=' + #{c.id}")}"%></div>
+        </div>
+      <% end %>
 
 
     <div id="submit-button">
