--- a/app/views/exam_groups/show.html.erb
+++ b/app/views/exam_groups/show.html.erb
@@ -34,8 +34,10 @@
             :success => "Element.hide('loader')") %></li>
       <% end  %>
     <% end %>
-    <%  if permitted_to? :new,:exams %>
-      <li><%= link_to t('new'), new_exam_group_exam_path(@exam_group) %></li>
+    <% if @current_user.admin? or @user_privileges.map{|p| p.name}.include?('ExaminationControl') or @user_privileges.map{|p| p.name}.include?('EnterResults') %>
+      <%  if permitted_to? :new,:exams %>
+        <li><%= link_to "#{t('new_text')}", new_exam_group_exam_path(@exam_group) %></li>
+      <% end %>
     <% end %>
   </ul>
 </div>
@@ -71,7 +73,7 @@
         </tr>
         <% @exam_group.exams.each do |exam| %>
 
-          <% if @employee_subjects.include?("#{exam.subject.id}") or @current_user.admin? or @current_user.privileges.map{|p| p.id}.include?(1) or @current_user.privileges.map{|p| p.id}.include?(2) %>
+          <% if @employee_subjects.include?(exam.subject.id) or @current_user.admin? or @user_privileges.map{|p| p.name}.include?('ExaminationControl') or @user_privileges.map{|p| p.name}.include?('EnterResults') %>
             <tr class="tr-<%= cycle('odd', 'even') %>">
               <% @exam = exam %>
               <td class="col-2"><%= link_to exam.subject.name, [@exam_group, exam] %></td>
