--- a/app/views/finance/_additional_particulars_list.erb
+++ b/app/views/finance/_additional_particulars_list.erb
@@ -17,22 +17,6 @@
 <div class="name"><%= t('category_name') %></div><div class="val"><span>:</span><%= @additional_category.name %></div>
 <div class="name"><%= t('description') %></div><div class="val"><span>:</span><%= @additional_category.description %></div>
 
-<% unless @additional_category.batch.nil? %>
-  <div class="name"><%= t('course_text') %></div><div class="val"><span>:</span><%= @additional_category.batch.full_name %></div>
-<% else %>
-  <div class="name"><%= t('course_text') %></div><div class="val"><span>:</span>NIL</div>
-<% end %>
-<div class="name"><%= t('start_date') %></div><div class="val"><span>:</span><%= @collection_date.start_date %></div>
-<div class="name"><%= t('end_date') %></div><div class="val"><span>:</span><%= @collection_date.end_date%></div>
-<div class="name"><%= t('due_date') %></div><div class="val"><span>:</span><%= @collection_date.due_date%></div>
-<br/>
-
-<div class="linker"><%= link_to_remote "#{t('add_particular')}", :url => { :action => 'add_particulars_new',:id => @collection_date} %>
-</div>
-
-<br/>
-<br/>
-
 <% unless @particulars.empty? %>
   <table id="listing" align="center" width="100%" cellpadding="1" cellspacing="1">
     <tr class="tr-head">
@@ -54,7 +38,7 @@
         <td class="col-3">
           <%unless fees.admission_no.nil?%>
             <%  student =  Student.find_by_admission_no(fees.admission_no)%>
-            <%= student.nil? ? "N.A." : student.full_name %>
+            <%= student.nil? ? "#{t('n_a')}" : student.full_name %>
           <% else %>
             -
           <% end %>
