--- a/app/views/finance/view_monthly_payslip.html.erb
+++ b/app/views/finance/view_monthly_payslip.html.erb
@@ -101,7 +101,7 @@
 
         </table>
       <% else %>
-        <div class="no-data"><%= t('no_payslip_found') %></div>
+        <div class="no-data"><p class="flash-msg"><%= t('no_payslip_found') %></p></div>
       <% end %>
     <% end %>
   </div>
