--- a/app/views/student/advanced_search.erb
+++ b/app/views/student/advanced_search.erb
@@ -20,7 +20,7 @@
 <div id="content-header">
   <img src="/images/student_details/student_details_logo.jpg" />
   <h1><%= t('student_text') %></h1>
-  <h3><%= t('advanced_search') %></h3>
+  <h3><%= t('advanced_search_text') %></h3>
   <div id="app-back-button">
     <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
   </div>
