--- a/app/views/timetable/_table.html.erb
+++ b/app/views/timetable/_table.html.erb
@@ -18,65 +18,65 @@
 #under the License. -%>
 
 <div id="register">
-      <div class="header">
-        <div class="prev">
-          <%= link_to_remote "◄", :url=>{:controller=>"timetable", :action=>"timetable",:next=>(@today-1.day)} %>
-        </div>
-        <div class="month">
-          <%= I18n.l(@today,:format=>" %d %B %Y") %>
-        </div>
-        <div class="next">
-        <%= link_to_remote "►", :url=>{:controller=>"timetable", :action=>"timetable",:next=>(@today+1.day)} %>
-        </div>
-        <div class="extender"></div>
-      </div>
+  <div class="header">
+    <div class="prev">
+      <%= link_to_remote "◄", :url=>{:controller=>"timetable", :action=>"timetable",:next=>(@today-1.day)} %>
     </div>
+    <div class="month">
+      <%= I18n.l(@today,:format=>" %d %B %Y") %>
+    </div>
+    <div class="next">
+      <%= link_to_remote "►", :url=>{:controller=>"timetable", :action=>"timetable",:next=>(@today+1.day)} %>
+    </div>
+    <div class="extender"></div>
+  </div>
+</div>
 
 <div class="table">
   <% @batches.each do |b| %>
-    <% weekday = Weekday.find_by_batch_id_and_weekday(b.id, @today.wday) %>
-    <% weekday = Weekday.find_by_batch_id_and_weekday(nil, @today.wday) if weekday.blank? %>
-
-      <% @timetable = TimetableEntry.find_all_by_batch_id_and_weekday_id(b.id, weekday.id) unless weekday.blank? %>
-      <% unless @timetable.blank? %>
-    <table border="0" align="center" width="100%" id="timing"  cellspacing="0">
-      <tr>
-        <td class="head">
-          <div class="top">
-            <%= t('time_text') %>
-          </div>
-          <div class="bottom">
-            <div class="course">
-              <%= b.course.code + ' - ' + b.name %>
-            </div>
-          </div>
-        </td>
-        <td class="td-blank"> </td>
-        <% @timetable.each do |t| %>
-          <% @timing = ClassTiming.find(t.class_timing_id) %>
-          <td>
+    <% weekday = Weekday.find_by_batch_id_and_weekday(b.id, @today.wday) if b.has_own_weekday%>
+    <% weekday = Weekday.find_by_batch_id_and_weekday(nil, @today.wday) unless b.has_own_weekday %>
+    <% @timetable = nil %>
+    <% @timetable = TimetableEntry.find_all_by_batch_id_and_weekday_id(b.id, weekday.id) unless weekday.blank? %>
+    <% unless @timetable.blank? %>
+      <table border="0" align="center" width="100%" id="timing"  cellspacing="0">
+        <tr>
+          <td class="head">
             <div class="top">
-              <%= @timing.start_time.strftime("%I:%M%p") unless @timing.start_time.nil? %>-<%= @timing.end_time.strftime("%I:%M%p") unless @timing.end_time.nil? %>
+              <%= t('time_text') %>
             </div>
             <div class="bottom">
-              <div class="subject">
-                <%= t.subject.code unless t.subject_id.nil? %>
+              <div class="course">
+                <%= b.course.code + ' - ' + b.name %>
               </div>
-              <% if @config.include?('HR') %>
-                <% unless t.employee.nil? %>
-                <div class="employee">
-                  <%= t.employee.first_name unless t.employee_id.nil? %>
-                </div>
-              <% end %>
-              <% end %>
             </div>
           </td>
-        <% end %>
+          <td class="td-blank"> </td>
+          <% @timetable.each do |t| %>
+            <% @timing = ClassTiming.find(t.class_timing_id) %>
+            <td>
+              <div class="top">
+                <%= @timing.start_time.strftime("%I:%M%p") unless @timing.start_time.nil? %>-<%= @timing.end_time.strftime("%I:%M%p") unless @timing.end_time.nil? %>
+              </div>
+              <div class="bottom">
+                <div class="subject">
+                  <%= t.subject.code unless t.subject_id.nil? %>
+                </div>
+                <% if @config.include?('HR') %>
+                  <% unless t.employee.nil? %>
+                    <div class="employee">
+                      <%= t.employee.first_name unless t.employee_id.nil? %>
+                    </div>
+                  <% end %>
+                <% end %>
+              </div>
+            </td>
+          <% end %>
 
-      </tr>
-    </table>
-      <% else %>
-        <div class="no-tt-entry"><%= t('no_timetable_entry_for_batch') %> : <%= b.full_name %> </div>
+        </tr>
+      </table>
+    <% else %>
+      <div class="no-tt-entry"><%= t('no_timetable_entry_for_batch') %>: <%= b.full_name %> </div>
     <% end %>
   <% end %>
 
