--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -51,7 +51,7 @@
 
       <% @batches.each do |batch| %>
         <li class="list<%=cycle('odd', 'even')%>">
-          <div class="category-name"><%= link_to batch.full_name, [@course, batch] %></div> <div class="category-edit"> <%= link_to "#{t('edit')}", edit_course_batch_path(@course, batch) if permitted_to? :edit, :batches %></div><div class="category-delete">   <%= link_to("#{t('delete')}", [@course, batch], :method => 'delete', :confirm => "#{t('delete_confirm_msg')}")  if permitted_to? :destroy, :batches %></div>
+          <div class="category-name"><%= link_to batch.full_name, [@course, batch] %></div> <div class="category-edit"> <%= link_to "#{t('edit_text')}", edit_course_batch_path(@course, batch) if permitted_to? :edit, :batches %></div><div class="category-delete">   <%= link_to("#{t('delete_text')}", [@course, batch], :method => 'delete', :confirm => "#{t('delete_confirm_msg')}")  if permitted_to? :destroy, :batches %></div>
         </li>
       <% end %>
 
