--- a/app/views/batches/show.html.erb
+++ b/app/views/batches/show.html.erb
@@ -33,7 +33,7 @@
     <% end %>
 
     <li><%= link_to "#{t('edit_text')}", edit_course_batch_path(@course, @batch) %></li>
-    <li><%= link_to("#{t('delete')}", [@course, @batch], :method => 'delete', :confirm => "#{t('are_you_sure')}") %></li>
+    <li><%= link_to("#{t('delete_text')}", [@course, @batch], :method => 'delete', :confirm => "#{t('are_you_sure')}") %></li>
 
 
     <li>
