--- a/app/views/exam_groups/new.html.erb
+++ b/app/views/exam_groups/new.html.erb
@@ -32,38 +32,45 @@
     <p class="flash-msg"> <%= flash[:notice] %> </p>
   <% end %>
 
-<div class="bread_crumb">
-        <%= link_to t('course_text'), courses_path %> &raquo;
-        <%= link_to @course.full_name, @course %> &raquo;
-        <%= link_to "#{t('batch')} #{@batch.name}", [@course, @batch] %> &raquo;
-        <%= link_to "#{t('exam_text')}", batch_exam_groups_path(@batch) %> &raquo;
-      <%= t('new_exam') %>
-        </div>
-    
-    
-    <div class="box">
+  <div class="bread_crumb">
+    <%= link_to t('course_text'), courses_path %> &raquo;
+    <%= link_to @course.full_name, @course %> &raquo;
+    <%= link_to "#{t('batch')} #{@batch.name}", [@course, @batch] %> &raquo;
+    <%= link_to "#{t('exam_text')}", batch_exam_groups_path(@batch) %> &raquo;
+    <%= t('new_exam') %>
+  </div>
 
-   <div id="flash"></div>
+
+  <div class="box">
+
+    <div id="flash"></div>
     <div id="exam-form">
-
-      <%= error_messages_for :exam_group %>
-      <% form_remote_for :exam_option, :url => {:controller=>'exam',:action => 'update_exam_form',:batch=>@batch} do |form| %>
-        <div class="label-field-pair">
-          <label for="exam_name"><%= t('new_text') %></label>
-          <% if params[:ename].nil?  %>
-          <% @ename = "" %>
-          <% else %>
-          <% @ename = params[:ename] %>
-          <% end  %>
-          <div class="text-input-bg"><%= form.text_field :name, :value=>@ename%></div>
-        </div>
-        <div class="label-field-pair">
-          <label for="exam_type"><%= t('exam_type') %></label>
-          <div class="text-input-bg"><%= select :exam_option,:exam_type,[[t('marks'),"Marks"],[t('grades'), "Grades"],[t('marks_and_grades'),"MarksAndGrades"]] %></div>
-        </div>
-        <%= submit_tag "", :value => "► #{t('save')}", :class => "submit_button" %>
-        <%  #  form.submit("Save") %>
-      <%end%>
+      <% unless params[:exam_group].blank? %>
+        <% if params[:exam_group][:exam_type] == 'Marks' or params[:exam_group][:exam_type] == 'MarksAndGrades' %>
+          <%= render :partial=>'exam/exam_marks_form' %>
+        <% else %>
+          <%= render :partial=>'exam/exam_grade_form' %>
+        <% end %>
+      <% else %>
+        <%= error_messages_for :exam_group %>
+        <% form_remote_for :exam_option, :url => {:controller=>'exam',:action => 'update_exam_form',:batch=>@batch} do |form| %>
+          <div class="label-field-pair">
+            <label for="exam_name"><%= t('new_text') %></label>
+            <% if params[:ename].nil?  %>
+              <% @ename = "" %>
+            <% else %>
+              <% @ename = params[:ename] %>
+            <% end  %>
+            <div class="text-input-bg"><%= form.text_field :name, :value=>@ename%></div>
+          </div>
+          <div class="label-field-pair">
+            <label for="exam_type"><%= t('exam_type') %></label>
+            <div class="text-input-bg"><%= select :exam_option,:exam_type,[[t('marks'),"Marks"],[t('grades'), "Grades"],[t('marks_and_grades'),"MarksAndGrades"]] %></div>
+          </div>
+          <%= submit_tag "", :value => "► #{t('save')}", :class => "submit_button" %>
+          <%  #  form.submit("Save") %>
+        <%end%>
+      <% end %>
     </div>
 
     <div class="extender"></div>
