--- a/app/views/student/fees.erb
+++ b/app/views/student/fees.erb
@@ -71,7 +71,7 @@
         <div class="category-name"><%= link_to "#{d.name}", :action=>:fee_details, :id=>@student.id, :id2=>d.id %></div>
         <div class="due-date"><%= d.due_date %></div>
         <% paid = @student.check_fees_paid(d)  %>
-        <div class="category-edit"><%= (paid) ? "PAID" : "UNPAID - #{d.fee_category.student_fee_balance(@student,d)}" %></div>
+        <div class="category-edit"><%= (paid) ? "PAID" : "UNPAID - #{d.student_fee_balance(@student)}" %></div>
       </li>
     <% end %>
   </ul>
