--- a/public/stylesheets/_layouts/dashboard.css
+++ b/public/stylesheets/_layouts/dashboard.css
@@ -18,10 +18,13 @@ body {
 }
 #header_link {
     color : #fff;
-    height : 40px;
+    height : 22px;
     float: right;
     font-size : 0.9em;
     padding : 10px 0 0 0;
+}
+#outer-header-link{
+    width:100%;
 }
 #header a {
     text-decoration:none;
@@ -33,7 +36,7 @@ body {
 
 #main-menu {
     float : left;
-    height : 60px; width : 540px;
+    height : 27px; width : 100%;
 }
 #main-menu a {
     background : #fff;
@@ -42,7 +45,7 @@ body {
     font-size : 0.8em;
     float : left;
     height : 17px; width : 83px;
-    margin : 38px 5px 0 0;
+    margin : 6px 5px 0 0;
     padding : 5px 0 0 0;
     text-align : center;
     text-decoration : none;
