--- a/app/views/student/profile.erb
+++ b/app/views/student/profile.erb
@@ -60,7 +60,7 @@
           <li><%= link_to "#{t('fees_text')}", :controller => 'student',:action => 'fees', :id => @student.id %></li>
         <% end %>
         <% FedenaPlugin::ADDITIONAL_LINKS[:student_profile_more_menu].each do |mod| %>
-          <li><%= link_to "#{mod[:title]}",mod[:destination].merge(:id=>@student.id) %></li>
+          <li><%= link_to "#{t(mod[:title])}",mod[:destination].merge(:id=>@student.id) %></li>
         <% end %>
       </ul>
     </li>
