sreeshanth (translation changes in dashboard)
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@938 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/layouts/dashboard.html.erb
+++ b/app/views/layouts/dashboard.html.erb
@@ -87,7 +87,7 @@
           <%= link_to "#{t('dashboard_text')}", :controller => "user", :action => "dashboard" %>
           <% this_user = User.find(session[:user_id]) if session[:user_id] %>
           <%  if this_user.student? || this_user.employee? %>
-            <%= link_to "#{t('calender_text')}", :controller => "calendar" %>
+            <%= link_to "#{t('calendar_text')}", :controller => "calendar" %>
           <% end %>
           <%= link_to "#{t('students')}", :controller => "student", :action => "index" \
             if this_user.admin? %>
