--- a/app/views/timetable/extra_class.html.erb
+++ b/app/views/timetable/extra_class.html.erb
@@ -33,7 +33,7 @@
     <label for="student_date_of_birth"><%= t('select') %> <%= t('date_text') %></label>
     <div class="text-input-bg">
       <%= calendar_date_select_tag 'extra_class[date]',
-        I18n.localize(Date.today, :format=>:default) , :year_range => 40.years.ago..0.years.ago %>
+        I18n.localize(Date.today, :format=>:normal) , :year_range => 40.years.ago..0.years.ago %>
     </div>
   </div>
   <div class="label-field-pair">
