added plugin hook for flash chart
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@939 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/finance/report_compare.html.erb
+++ b/app/views/finance/report_compare.html.erb
@@ -91,7 +91,17 @@
         <td class="col-3" align="right"><%=@transactions_fees%></td>
         <td class="col-3"> - </td>
       </tr>
- 
+
+      <% FedenaPlugin::FINANCE_CATEGORY.each do |category| %>
+      <tr class="tr-<%=cycle('even','odd')%>">
+        <td class="col-1"><%= index+=1 %></td>
+          <td class="col-2"><%= link_to "#{t(category[:category_name]+'_account')}" , category[:destination].merge(:start => @start_date,:end => @end_date)%> </td>
+        <td></td>
+        <td class="col-3" align="right"><%=@category_transaction_totals["#{category[:category_name]}"]%></td>
+        <td class="col-3"> - </td>
+      </tr>
+      <% end %>
+      
       <% @other_transactions.each_with_index do |t,i| %>
         <tr class="tr-<%= cycle("even","odd") %>">
           <td class ="col-1"><%=i+index+1%></td>
@@ -185,6 +195,16 @@
         <td class="col-3" align="right"><%=@transactions_fees2%></td>
         <td class="col-3"> - </td>
       </tr>
+
+      <% FedenaPlugin::FINANCE_CATEGORY.each do |category| %>
+      <tr class="tr-<%=cycle('even','odd')%>">
+        <td class="col-1"><%= index+=1 %></td>
+          <td class="col-2"><%= link_to "#{t(category[:category_name]+'_account')}" , category[:destination].merge(:start => @start_date2,:end => @end_date2)%> </td>
+        <td></td>
+        <td class="col-3" align="right"><%=@category_transaction_totals2["#{category[:category_name]}"]%></td>
+        <td class="col-3"> - </td>
+      </tr>
+      <% end %>
 
       <% @other_transactions2.each_with_index do |t,i| %>
         <tr class="tr-<%= cycle("even","odd") %>">
