sreeshanth (bug 9 fixes )
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@942 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/student/_student_category_list.erb
+++ b/app/views/student/_student_category_list.erb
@@ -22,7 +22,7 @@
       <% @student_categories.each do |c| %>
       <li class="list<%=cycle('odd', 'even')%>">
         <div class="category-name"><%= c.name %></div>
-        <div class="category-edit"><%= link_to_remote "#{t('edit_text')}", :url => { :action => 'category_edit', :id => c.id } %> </div><div class="category-delete"><%= link_to_remote "#{t('delete')}", :url => { :action => 'category_delete', :id => c.id } %></div>
+        <div class="category-edit"><%= link_to_remote "#{t('edit_text')}", :url => { :action => 'category_edit', :id => c.id } %> </div><div class="category-delete"><%= link_to_remote "#{t('delete_text')}", :url => { :action => 'category_delete', :id => c.id } %></div>
       </li>
      <% end %>
 
