--- a/app/views/finance/_fee_particulars_create_form.html.erb
+++ b/app/views/finance/_fee_particulars_create_form.html.erb
@@ -43,13 +43,13 @@
     <div class="label-field-pair2">
       <div class="label-container2"><label><%= t('create_using') %></label></div>
       <div class="input-container2">
-        <div class="opt"><%= radio_button("#{t('particulars')}","#{t('select')}","#{t('all')}",
+        <div class="opt"><%= radio_button("particulars","select","all",
             {:checked=>true,:onchange => "#{remote_function(:url => {:action => "student_or_student_category"},
               :with => "'select_value='+value")}"}) %><%= t('all') %></div>
-         <div class="opt"><%=  radio_button("#{t('particulars')}","#{t('select')}","#{t('student_text')}",
+        <div class="opt"><%=  radio_button("particulars","select","student",
   {:onchange => "#{remote_function(:url => {:action => "student_or_student_category"},
   :with => "'select_value='+value")}"}) %><%= t('admission_no') %></div>
-        <div class="opt"> <%= radio_button("#{t('particulars')}","#{t('select')}","#{t('category')}",
+        <div class="opt"> <%= radio_button("particulars","select","category",
             {:onchange => "#{remote_function(:url => {:action => "student_or_student_category"},
               :with => "'select_value='+value")}"}) %><%= t('student_category') %> </div>
       </div>
